--- a/application/views/students/profile.html
+++ b/application/views/students/profile.html
@@ -1,18 +1,72 @@
 {include layouts/modal/studentprofile.html}
-{include layouts/modal/qualification.html}
-{include layouts/modal/work.html}
 <section class="container">
     <div class="row">
-        <div class="col-xs-12 col-md-9">
-            <ol class="breadcrumb">
-                <li><a href="home"><i class="fa fa-home fa-fw"></i> Home</a></li>
-                <li class="active"><i class="fa fa-male fa-fw"></i> Profile</li>
-            </ol>
-            <div class="panel panel-default table-responsive">
+
+        <div class="col-xs-12 col-md-3">
+
+            <div class="panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-book fa-fw"></i> Education
+                    <i class="fa fa-user"></i> Profile Status
+                </div>
+                <div class="panel-body">
+                    <p><b>Your profile is {echo $profile}% complete</b></p>
+                    <p>
+                        {if(empty($student->about))}
+                        <a href="students/settings">Add your Objective</a>
+                        {/if}
+                    </p>
+                    <p>
+                        {if(!count($works))}
+                        <a href="students/work">Add Work Experience</a>
+                        {/if}
+                    </p>
+                    <p>
+                        {if(!count($qualifications))}
+                        <a href="students/qualification">Add Education details</a>
+                        {/if}
+                    </p>
+                    <p>
+                        {if(empty($student->skills))}
+                        <a href="students/settings">Add your Skills</a>
+                        {/if}
+                    </p>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <i class="fa fa-bullhorn"></i> Sponsored
+                    <div class="btn-group pull-right">
+                        <button onclick="loadSponsored(--page, '1');" class="btn btn-default btn-xs"><i class="fa fa-chevron-left"></i></button>
+                        <button onclick="loadSponsored(++page, '1');" class="btn btn-default btn-xs"><i class="fa fa-chevron-right"></i></button>
+                    </div>
+                </div>
+                <div class="panel-body" id="sponsored"></div>
+            </div>
+
+        </div>
+
+        <div class="col-xs-12 col-md-9">
+
+            <div class="panel panel-success">
+                <div class="panel-body">
+                    <h2 class="text-center">{echo $user->name}</h2>
+                </div>
+
+                <div class="panel-heading">
+                    Objective
                     <div class="pull-right">
-                        <button type="button" data-toggle="modal" data-target="#modal_qualification" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</button>
+                        <button type="button" name="addmore" value="qualification" class="btn btn-info btn-xs"><i class="fa fa-edit fa-fw"></i> Add/Edit</button>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    Completing this is very important to making a good impression with employers. 
+                </div>
+
+                <div class="panel-heading">
+                    Education Details
+                    <div class="pull-right">
+                        <a href="students/qualification" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</a>
                     </div>
                 </div>
                 <table class="table">
@@ -27,33 +81,31 @@
                         </tr>
                     </thead>
                     <tbody id="qualification">
-                    {if (count($qualifications) == '0')}
-                        <p class="text-center">Please add all your Qualification and current education to be able to select in any internship. college training also counts.</p>
+                        {if (count($qualifications) == '0')}
+                    <p class="text-center">Please add all your Qualification and current education to be able to select in any internship. college training also counts.</p>
                     {/if}
                     {else}
-                        {foreach $qualification in $qualifications}
-                            {script $organization  = Organization::first(array("id = ?" => $qualification->organization_id), array("id", "name"))}
-                            <tr>
-                                <td>{echo $qualification->degree}</td>
-                                <td>{echo $qualification->major}</td>
-                                <td><a href="organization/{echo urlencode($organization->name)}/{echo $organization->id}" target="_blank">{echo $organization->name}</a></td>
-                                <td>{echo $qualification->gpa}</td>
-                                <td>{echo $qualification->passing_year}</td>
-                                <td>
-                                    <button type="button" name="delete" value="qualification" id="{echo $qualification->id}" class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Delete</button>
-                                </td>
-                        </tr>
-                        {/foreach}
+                    {foreach $qualification in $qualifications}
+                    {script $organization  = Organization::first(array("id = ?" => $qualification->organization_id), array("id", "name"))}
+                    <tr>
+                        <td>{echo $qualification->degree}</td>
+                        <td>{echo $qualification->major}</td>
+                        <td><a href="organization/{echo urlencode($organization->name)}/{echo $organization->id}" target="_blank">{echo $organization->name}</a></td>
+                        <td>{echo $qualification->gpa}</td>
+                        <td>{echo $qualification->passing_year}</td>
+                        <td>
+                            <button type="button" name="delete" value="qualification" id="{echo $qualification->id}" class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Delete</button>
+                        </td>
+                    </tr>
+                    {/foreach}
                     {/else}
                     </tbody>
                 </table>
-            </div>
 
-            <div class="panel panel-default table-responsive">
                 <div class="panel-heading">
-                    <i class="fa fa-briefcase fa-fw"></i> Work Experience
+                    Experience
                     <div class="pull-right">
-                        <button type="button" data-toggle="modal" data-target="#modal_work" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</button>
+                        <a href="students/work" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</a>
                     </div>
                 </div>
                 <table class="table">
@@ -67,63 +119,49 @@
                         </tr>
                     </thead>
                     <tbody>
-                    {if (count($works) == '0')}
-                        <p class="text-center">You have not added any work Experience till now Please add any Experience to be able to select in any internship. small work as working fest counts.</p>
+                        {if (count($works) == '0')}
+                    <p class="text-center">You have not added any work Experience till now Please add any Experience to be able to select in any internship. small work as working fest counts.</p>
                     {/if}
                     {else}
-                        {foreach $work in $works}
-                            {script $organization  = Organization::first(array("id = ?" => $work->organization_id), array("id", "name"))}
-                            <tr>
-                                <td><a href="organization/{echo urlencode($organization->name)}/{echo $organization->id}" target="_blank">{echo $organization->name}</a></td>
-                                <td>{echo $work->designation}</td>
-                                <td>{echo $work->responsibility}</td>
-                                <td>{echo $work->duration}</td>
-                                <td>
-                                    <button type="button" name="delete" value="work" id="{echo $work->id}" class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Delete</button>
-                                </td>
-                            </tr>
-                        {/foreach}
+                    {foreach $work in $works}
+                    {script $organization  = Organization::first(array("id = ?" => $work->organization_id), array("id", "name"))}
+                    <tr>
+                        <td><a href="organization/{echo urlencode($organization->name)}/{echo $organization->id}" target="_blank">{echo $organization->name}</a></td>
+                        <td>{echo $work->designation}</td>
+                        <td>{echo $work->responsibility}</td>
+                        <td>{echo $work->duration}</td>
+                        <td>
+                            <button type="button" name="delete" value="work" id="{echo $work->id}" class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Delete</button>
+                        </td>
+                    </tr>
+                    {/foreach}
                     {/else}
                     </tbody>
                 </table>
-            </div>
-            
-            <div class="panel panel-default">
+
                 <div class="panel-heading">
-                    <i class="fa fa-lock fa-fw"></i> Security Details
+                    Skills
                     <div class="pull-right">
-                        <div class="btn-group">
-                            <button type="button" name="message" value="1" class="btn btn-danger btn-xs"><i class="fa fa-exclamation-circle"></i> Report</button>
-                        </div>
+                        <button type="button" name="addmore" value="qualification" class="btn btn-info btn-xs"><i class="fa fa-edit fa-fw"></i> Add/Edit</button>
                     </div>
                 </div>
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <td>Last IP</td>
-                            <td>{echo $user->last_ip}</td>
-                        </tr>
-                        <tr>
-                            <td>Last Login</td>
-                            <td>{echo $user->last_login}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                <div class="panel-body">
+                    Skills matter as it will help employer to chose if you are better for an internship
+                </div>
 
-        </div>
-        <div class="col-xs-12 col-md-3">
-
-            <div class="panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-bullhorn"></i> Sponsored
-                    <div class="btn-group pull-right">
-                        <button onclick="loadSponsored(--page, '1');" class="btn btn-default btn-xs"><i class="fa fa-chevron-left"></i></button>
-                        <button onclick="loadSponsored(++page, '1');" class="btn btn-default btn-xs"><i class="fa fa-chevron-right"></i></button>
+                    Links
+                    <div class="pull-right">
+                        <button type="button" name="addmore" value="qualification" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</button>
                     </div>
                 </div>
-                <div class="panel-body" id="sponsored"></div>
+                <div class="panel-body">
+                    Show us your stuff. Add links to your website, blog or work samples.
+                </div>
+
             </div>
+
         </div>
+
     </div>
 </section>
