Student Setttings Update

--- a/application/views/students/settings.html
+++ b/application/views/students/settings.html
@@ -35,7 +35,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-pencil"></i> Objective</label>
-                                <input type="text" name="about" class="form-control" placeholder="{echo $user->about}">
+                                <input type="text" name="about" class="form-control" placeholder="{echo $student->about}">
                             </div>
                         </div>
                     </div>
