--- a/application/views/onlinetest/test_participated.html
+++ b/application/views/onlinetest/test_participated.html
@@ -18,6 +18,7 @@
 						<div class="media-body">
 							<h3 class="media-heading">{echo $test->title}</h3>
 							<p class="text-warning">You have already taken this exam in the last 15 day(s), so you cannot take it again yet.<br>Please wait or take a different exam.</p>
+							<p class="text-center"><a href="{echo 'tests/'}" class="btn btn-primary">See All Test</a></p>
 						</div>
 					</div>
 				</div>
