--- a/application/views/onlinetest/test_result.html
+++ b/application/views/onlinetest/test_result.html
@@ -1,11 +1,10 @@
-<?php require_once $dir_public.'requires/header.php';?>
 <!-- the middle contents -->
 <section class="container">
 	<div class="row">
 		<nav><ol class="breadcrumb">
 			<li><a href="home">Home</a></li>
 			<li><a href="test">Test</a></li>
-			<li class="active"><?php echo $test->title;?></li>
+			<li class="active">{echo $test->title}</li>
 		</ol></nav>
 		<article class="row">
 			<div class="col-md-4">
@@ -14,9 +13,9 @@
 						<h3 class="panel-title">Test Result</h3>
 					</div>
 					<div class="panel-body">
-						<p>Marks : <?php echo $participant->score;?> out of 100</p>
-						<p>Question Attemted : <?php echo $participant->attempted;?></p>
-						<p>Give On : <?php echo only_date($participant->created);?></p>
+						<p>Marks : {echo $participant->score} out of 100</p>
+						<p>Question Attempted : {echo $participant->attempted}</p>
+						<p>Give On : {echo Framework\StringMethods::only_date($participant->created)}</p>
 					</div>
 				</div>
 			</div>
@@ -26,9 +25,9 @@
 						<h3 class="panel-title">Test Details</h3>
 					</div>
 					<div class="panel-body">
-						<p><?php echo $test->title;?></p>
-						<p>Category : <?php echo $test->subject;?></p>
-						<p>Created On : <?php echo only_date($test->created);?></p>
+						<p>{echo $test->title}</p>
+						<p>Category : {echo $test->subject}</p>
+						<p>Created On : {echo Framework\StringMethods::only_date($test->created)}</p>
 					</div>
 				</div>
 			</div>
@@ -38,8 +37,8 @@
 						<h3 class="panel-title">Student Details</h3>
 					</div>
 					<div class="panel-body">
-						<p><?php echo $user->name;?></p>
-						<p>Skills : <?php echo $student->skills;?></p>
+						<p>{echo $user->name}</p>
+						<p>Skills : {echo $student->skills}</p>
 					</div>
 				</div>
 			</div>
@@ -47,15 +46,15 @@
 		</article>
 		<article>
 			<div class="row text-center">
-			<?php if($participant->score < 60){?>
-				<p class="text-warning">You have Got <?php echo $participant->score;?>% Marks which is less than 70% so we could not certify. Please try again tommorow to give test here.</p>
-			<?php }else {?>
-				<p class="text-warning">You have Got <?php echo $participant->score;?>% Marks. Good work keep it up.</p>
-			<?php }?>
-				<p>You can also see various other test available on site from <a href="test">here</a></p>
-				<hr>
+			{if($participant->score < 60)}
+                            <p class="text-warning">You have Got {echo $participant->score}% Marks which is less than 70% so we could not certify. Please try again tomorrow to give test here.</p>
+                        {/if}
+			{else}
+                            <p class="text-warning">You have Got {echo $participant->score}% Marks. Good work keep it up.</p>
+			{/else}
+                            <p>You can also see various other test available on site from <a href="/tests">Here</a></p>
+                            <hr>
 			</div>
 		</article>
 	</div>
 </section>
-<?php require_once $dir_public.'requires/footer.php';?>
