--- a/application/views/onlinetest/certification.html
+++ b/application/views/onlinetest/certification.html
@@ -1,4 +1,4 @@
-<header class="intro-header" style="background-image: url('assets/images/others/certification.png');">
+<header class="intro-header" style="background-image: url({echo CDN}images/others/certification.png);">
 	<div class="container">
 		<div class="row text-center">
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
